# seven-eleven-pdf

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/seven_eleven_pdf/: __init__.py  __main__.py  cli.py  core.py  pdf_tools.py
tests/: test_cli.py  test_core.py
